@@ -1,6 +1,13 @@
+2007-09-11  Jonh Wendell  <jwendell@gnome.org>
+
+	* src/vinagre-tab.c,
+	* src/vinagre-window.[ch],
+	* src/vinagre-connection.[ch]:
+	  - Updates tab label and window title when we connect into a host.
+
 2007-09-06  Jonh Wendell  <jwendell@gnome.org>
 
-	* src/vinagre-tab.c
+	* src/vinagre-tab.c:
 	  - Show pointer grab/ungrab messages on statusbar
 
 2007-09-06  Jonh Wendell  <jwendell@gnome.org>
